--- a/about.html
+++ b/about.html
@@ -347,55 +347,55 @@
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-15.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2009</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-16.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2010</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-17.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2011</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-15.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2013</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-16.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2015</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-17.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2017</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-15.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2018</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-16.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2020</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-17.jpg" alt="">
-                                <div class="year">1978</div>
+                                <div class="year">2022</div>
                             </div>
                         </div>
                     </div>
@@ -403,10 +403,10 @@
                 <div class="swiper-container history-content">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
+                            <div class="text">In the year of 2009, Dr. Mafabi Adi <br>and his team met and discussed how they will use their skills to raise money to the  daily <br>life of the poor people.</div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
+                            <div class="text">In the year of 2010,  <br>Heal African Orphans Charity was recognized by the community and how it was helping improve<br> the life of the poor people.</div>
                         </div>
                         <div class="swiper-slide">
                             <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
