--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <div class="swiper-container banner-slider">
             <div class="swiper-wrapper">
                 <!-- Slide Item -->
-                <div class="swiper-slide" style="background-image: url(images/main-slider/1.jpg);">
+                <div class="swiper-slide" style="background-image: url(images/main-slider/1b.jpg);">
                     <div class="content-outer">
                         <div class="content-box justify-content-center">
                             <div class="inner text-center">
@@ -329,7 +329,7 @@
                 </div>
 
                 <!-- Slide Item -->
-                <div class="swiper-slide" style="background-image: url(images/main-slider/2.jpg);">
+                <div class="swiper-slide" style="background-image: url(images/main-slider/2b.jpg);">
                     <div class="content-outer">
                         <div class="content-box justify-content-center">
                             <div class="inner text-center">
@@ -343,7 +343,7 @@
                 </div>
 
                 <!-- Slide Item -->
-                <div class="swiper-slide" style="background-image: url(images/main-slider/3.jpg);">
+                <div class="swiper-slide" style="background-image: url(images/main-slider/3b.jpg);">
                     <div class="content-outer">
                         <div class="content-box justify-content-center">
                             <div class="inner text-center">
@@ -412,7 +412,7 @@
                     <!-- Cause Block One -->
                     <div class="cause-block-one">
                         <div class="inner-box">
-                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1.jpg" alt=""></a></div>
+                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1b (3).jpg" alt=""></a></div>
                             <div class="lower-content">
                                 <h4><a href="cause-details.html">Help nigerian girls education</a></h4>
                                 <div class="category"><a href="#"><span class="flaticon-book"></span>Education</a></div>
@@ -450,7 +450,7 @@
                     <!-- Cause Block One -->
                     <div class="cause-block-one">
                         <div class="inner-box">
-                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-2.jpg" alt=""></a></div>
+                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1b (3).jpg" alt=""></a></div>
                             <div class="lower-content">
                                 <h4><a href="cause-details.html">Help bolanile fight cancer</a></h4>
                                 <div class="category"><a href="#"><span class="flaticon-heart"></span>Helth & Diseases</a></div>
@@ -488,7 +488,7 @@
                     <!-- Cause Block One -->
                     <div class="cause-block-one">
                         <div class="inner-box">
-                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1.jpg" alt=""></a></div>
+                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1b (1).jpg" alt=""></a></div>
                             <div class="lower-content">
                                 <h4><a href="cause-details.html">Donation for helpless people</a></h4>
                                 <div class="category"><a href="#"><span class="flaticon-fruit"></span>Hunger & Nutrition</a></div>
@@ -519,14 +519,14 @@
                                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                         </ul>
                                     </div>
-                                </div>                            
+                                </div>                           
                             </div>
                         </div>
                     </div>
                     <!-- Cause Block One -->
                     <div class="cause-block-one">
                         <div class="inner-box">
-                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1.jpg" alt=""></a></div>
+                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1b (2).jpg" alt=""></a></div>
                             <div class="lower-content">
                                 <h4><a href="cause-details.html">Help nigerian girls education</a></h4>
                                 <div class="category"><a href="#"><span class="flaticon-book"></span>Education</a></div>
@@ -564,7 +564,7 @@
                     <!-- Cause Block One -->
                     <div class="cause-block-one">
                         <div class="inner-box">
-                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-2.jpg" alt=""></a></div>
+                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1b (1).jpg" alt=""></a></div>
                             <div class="lower-content">
                                 <h4><a href="cause-details.html">Help bolanile fight cancer</a></h4>
                                 <div class="category"><a href="#"><span class="flaticon-heart"></span>Helth & Diseases</a></div>
@@ -602,7 +602,7 @@
                     <!-- Cause Block One -->
                     <div class="cause-block-one">
                         <div class="inner-box">
-                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1.jpg" alt=""></a></div>
+                            <div class="image"><a href="cause-details.html"><img src="images/resource/cause-1b (2).jpg" alt=""></a></div>
                             <div class="lower-content">
                                 <h4><a href="cause-details.html">Donation for helpless people</a></h4>
                                 <div class="category"><a href="#"><span class="flaticon-fruit"></span>Hunger & Nutrition</a></div>
